--- a/1. Two sum.md
+++ b/1. Two sum.md
@@ -30,3 +30,37 @@ Only one valid answer exists.
  
 
 Follow-up: Can you come up with an algorithm that is less than O(n2) time complexity?
+
+
+# Solution
+Let’s solve the Two Sum problem in Python using a one-pass approach. Given an array of integers nums and a target value, we want to find the indices of two numbers in the array that add up to the target. Here’s an efficient one-pass solution using a dictionary:
+
+Python
+```
+def two_sum(nums, target):
+    num_to_index = {}  # Dictionary to store each element and its index
+    for i, num in enumerate(nums):
+        complement = target - num
+        if complement in num_to_index:
+            return [num_to_index[complement], i]
+        num_to_index[num] = i
+    raise ValueError("No two sum solution")
+
+# Example usage
+nums1 = [2, 7, 11, 15]
+target1 = 9
+print(two_sum(nums1, target1))  # Output: [0, 1]
+
+nums2 = [3, 2, 4]
+target2 = 6
+print(two_sum(nums2, target2))  # Output: [1, 2]
+```
+
+In this solution:
+
+We iterate through the array once.
+For each element, we calculate its complement (target minus the element).
+If the complement exists in our dictionary, we return the indices of the two elements.
+Otherwise, we add the current element and its index to the dictionary.
+If no solution is found, we raise an exception.
+This approach has a time complexity of O(n) and is more efficient than the brute-force method.
