--- a/1. Two sum.md
+++ b/1. Two sum.md
@@ -36,15 +36,19 @@ Follow-up: Can you come up with an algorithm that is less than O(n2) time comple
 Let’s solve the Two Sum problem in Python using a one-pass approach. Given an array of integers nums and a target value, we want to find the indices of two numbers in the array that add up to the target. Here’s an efficient one-pass solution using a dictionary:
 
 Python
+
+```bash
+
+class Solution:
+    def twoSum(self, nums: List[int], target: int) -> List[int]:
+        index = {}  # Create an empty dictionary to store each element and its index
+        for i, num in enumerate(nums):
+            comp = target - num  # Calculate the complement (target minus the current element)
+            if comp in index:  # If the complement exists in the dictionary
+                return [index[comp], i]  # Return the indices of the two elements
+            index[num] = i  # Add the current element and its index to the dictionary
+        raise ValueError("No two sum solution")  # If no solution is found, raise an exception
 ```
-def two_sum(nums, target):
-    num_to_index = {}  # Dictionary to store each element and its index
-    for i, num in enumerate(nums):
-        complement = target - num
-        if complement in num_to_index:
-            return [num_to_index[complement], i]
-        num_to_index[num] = i
-    raise ValueError("No two sum solution")
 
 # Example usage
 nums1 = [2, 7, 11, 15]
