Update 1. Two sum.md

--- a/1. Two sum.md
+++ b/1. Two sum.md
@@ -33,34 +33,52 @@ Follow-up: Can you come up with an algorithm that is less than O(n2) time comple
 
 
 # Solution
-Let’s solve the Two Sum problem in Python using a one-pass approach. Given an array of integers nums and a target value, we want to find the indices of two numbers in the array that add up to the target. Here’s an efficient one-pass solution using a dictionary:
+Let’s solve the Two Sum problem in Python. Given an array of integers nums and a target value, we need to find the indices of two numbers in the array that add up to the target. Here are a couple of approaches:
+
+1. Brute Force Approach (O(n^2)):
+Iterate through the array and for each element, check if there exists another element such that their sum equals the target.
+This approach involves a nested loop and has a time complexity of O(n^2).
+Here’s a sample implementation:
+In this solution:
 
 Python
-
 ```bash
-
-class Solution:
-    def twoSum(self, nums: List[int], target: int) -> List[int]:
-        index = {}  # Create an empty dictionary to store each element and its index
-        for i, num in enumerate(nums):
-            comp = target - num  # Calculate the complement (target minus the current element)
-            if comp in index:  # If the complement exists in the dictionary
-                return [index[comp], i]  # Return the indices of the two elements
-            index[num] = i  # Add the current element and its index to the dictionary
-        raise ValueError("No two sum solution")  # If no solution is found, raise an exception
-```
+def two_sum(nums, target):
+    for i in range(len(nums)):
+        for j in range(i + 1, len(nums)):
+            if nums[i] + nums[j] == target:
+                return [i, j]
+    raise ValueError("No two sum solution")
 
 # Example usage
 nums1 = [2, 7, 11, 15]
 target1 = 9
 print(two_sum(nums1, target1))  # Output: [0, 1]
+```
+2. Using a Hash Map (O(n)):
+Create a dictionary (hash map) to store each element and its index.
+While iterating through the array, calculate the complement (target minus the current element) and check if it exists in the dictionary.
+If found, return the indices of the two elements.
+This approach has a time complexity of O(n).
+Here’s an implementation:
 
+Python
+```bash
+def two_sum(nums, target):
+    num_to_index = {}
+    for i, num in enumerate(nums):
+        complement = target - num
+        if complement in num_to_index:
+            return [num_to_index[complement], i]
+        num_to_index[num] = i
+    raise ValueError("No two sum solution")
+
+# Example usage
 nums2 = [3, 2, 4]
 target2 = 6
 print(two_sum(nums2, target2))  # Output: [1, 2]
 ```
 
-In this solution:
 
 We iterate through the array once.
 For each element, we calculate its complement (target minus the element).
