--- a/1. Two sum.md
+++ b/1. Two sum.md
@@ -23,9 +23,9 @@ Output: [0,1]
 
 Constraints:
 
-2 <= nums.length <= 104
--109 <= nums[i] <= 109
--109 <= target <= 109
+2 <= nums.length <= 10^4
+-10^9 <= nums[i] <= 10^9
+-10^9 <= target <= 10^9
 Only one valid answer exists.
  
 
@@ -78,7 +78,6 @@ nums2 = [3, 2, 4]
 target2 = 6
 print(two_sum(nums2, target2))  # Output: [1, 2]
 ```
-
 
 We iterate through the array once.
 For each element, we calculate its complement (target minus the element).
